--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domino Stack 3D Game</title>
-    <script src="gl.js"></script> <!--Load GL functions I made, e.g. shapes.Cuboid and gl.do.draw(gl)-->
     <script src="game.js"></script> <!--Load main game script-->
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>[In Development]</h1>
-    <canvas id="glCanvas" width="640" height="480"></canvas>
+    <canvas id="gameCanvas" width="809" height="500"></canvas><!--Golden Ratio-->
 </body>
 </html>
