Added more rotating

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <h1>[In Development]</h1>
-    <canvas id="gameCanvas" width="809" height="500"></canvas><!--Golden Ratio-->
+    <canvas id="gameCanvas" width="809" height="500" title="Game Board"></canvas><!--Golden Ratio-->
 </body>
 </html>
